<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calendar_colors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.firecaster.saver.CalendarColors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/colors_representation"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View style="@style/Divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/lavanderSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/lavender"></FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/calendar_selected_day" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/redSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/red"></FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/economic_benefit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/blueSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/blue"></FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/schedule_guide" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/greenSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/green"></FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/feeding_benefit" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/pinkSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/pink"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/preregistration" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/orangeSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/orange"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/ordinary_registration_dates" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/purpleSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/purple"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/ordinary_registration" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/yellowSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/yellow"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/inclusion_quotas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/violetSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/violet"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/inclusion_pre_registration" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/tomatoSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/tomato"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/inclusion_registration_dates" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/indigoSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/indigo"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/inclusion_registration" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/aquaSquare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="20dp"
                android:background="@color/cyan"></FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/hunger_games_start" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
